apps/web/src/styles/global.css
@import "@fontsource-variable/geist";
@import "@fontsource-variable/geist-mono";

@import "tailwindcss";

@import "tw-animate-css";

@import "./canvas-vendor.css";

@custom-variant dark (&:is(.dark *));

@theme inline {
  --color-destructive-foreground: var(--destructive-foreground);
  @keyframes accordion-down {
    from {
      height: 0;
    }
    to {
      height: var(
        --radix-accordion-content-height,
        var(--accordion-panel-height, auto)
      );
    }
  }

  @keyframes accordion-up {
    from {
      height: var(
        --radix-accordion-content-height,
        var(--accordion-panel-height, auto)
      );
    }
    to {
      height: 0;
    }
  }
}

@custom-variant data-open {
  &:where([data-state="open"]),
  &:where([data-open]:not([data-open="false"])) {
    @slot;
  }
}

@custom-variant data-closed {
  &:where([data-state="closed"]),
  &:where([data-closed]:not([data-closed="false"])) {
    @slot;
  }
}

@custom-variant data-checked {
  &:where([data-state="checked"]),
  &:where([data-checked]:not([data-checked="false"])) {
    @slot;
  }
}

@custom-variant data-unchecked {
  &:where([data-state="unchecked"]),
  &:where([data-unchecked]:not([data-unchecked="false"])) {
    @slot;
  }
}

@custom-variant data-selected {
  &:where([data-selected="true"]) {
    @slot;
  }
}

@custom-variant data-disabled {
  &:where([data-disabled="true"]),
  &:where([data-disabled]:not([data-disabled="false"])) {
    @slot;
  }
}

@custom-variant data-active {
  &:where([data-state="active"]),
  &:where([data-active]:not([data-active="false"])) {
    @slot;
  }
}

@custom-variant data-horizontal {
  &:where([data-orientation="horizontal"]) {
    @slot;
  }
}

@custom-variant data-vertical {
  &:where([data-orientation="vertical"]) {
    @slot;
  }
}

@utility no-scrollbar {
  -ms-overflow-style: none;
  scrollbar-width: none;

  &::-webkit-scrollbar {
    display: none;
  }
}

@utility no-drag {
  -webkit-app-region: no-drag;
}

:root {
  --font-heading:
    "Geist Variable", -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
  --font-mono:
    "Geist Mono Variable", ui-monospace, SFMono-Regular, "SF Mono", monospace;
  --font-sans:
    "Geist Variable", -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
  --menu-min-width: 14rem;
  --radius: 0.5rem;
  --background: var(--color-neutral-50);
  --foreground: var(--color-neutral-800);
  --card: var(--color-white);
  --card-foreground: var(--color-neutral-800);
  --popover: var(--color-white);
  --popover-foreground: var(--color-neutral-800);
  --primary: var(--color-neutral-800);
  --primary-foreground: var(--color-neutral-50);
  --secondary: --alpha(var(--color-black) / 5%);
  --secondary-foreground: var(--color-neutral-800);
  --muted: --alpha(var(--color-black) / 5%);
  --muted-foreground: color-mix(
    in srgb,
    var(--color-neutral-500) 90%,
    var(--color-black)
  );
  --surface-hover: --alpha(var(--color-black) / 7%);
  --accent: --alpha(var(--color-black) / 5%);
  --accent-foreground: var(--color-neutral-800);
  --destructive: var(--color-red-500);
  --border: --alpha(var(--color-black) / 4%);
  --input: --alpha(var(--color-black) / 6%);
  --ring: var(--color-neutral-300);
  --chart-1: var(--color-orange-600);
  --chart-2: var(--color-teal-600);
  --chart-3: var(--color-cyan-900);
  --chart-4: var(--color-amber-400);
  --chart-5: var(--color-amber-500);
  --sidebar: var(--color-white);
  --sidebar-foreground: color-mix(
    in srgb,
    var(--color-neutral-700) 80%,
    var(--sidebar)
  );
  --sidebar-primary: var(--color-neutral-800);
  --sidebar-primary-foreground: var(--color-neutral-50);
  --sidebar-accent: --alpha(var(--color-black) / 4%);
  --sidebar-accent-foreground: var(--color-neutral-800);
  --sidebar-border: --alpha(var(--color-black) / 3%);
  --sidebar-ring: var(--color-neutral-300);
  --destructive-foreground: var(--color-red-700);
  --info: var(--color-blue-500);
  --info-foreground: var(--color-blue-700);
  --success: var(--color-emerald-500);
  --success-foreground: var(--color-emerald-700);
  --warning: var(--color-amber-500);
  --warning-foreground: var(--color-amber-700);
  --code: var(--color-white);
  --code-foreground: var(--foreground);
  --code-highlight: --alpha(var(--color-black) / 4%);
  --canvas-transform-box-lines: oklch(0.92 0 0);
  --canvas-transform-box-handles: oklch(0.85 0 0);
  --canvas-transform-box-handles-border: oklch(0.75 0 0);
  --canvas-transform-box-handles-ring: oklch(0.75 0);
  --canvas-transform-preview-box-lines: oklch(0.935 0 0);
  color-scheme: light;
}

* {
  box-sizing: border-box;
}

html,
body,
#root {
  width: 100%;
  height: 100%;
  margin: 0;
  overflow: hidden;
}

#root {
  position: relative;
  min-height: 100svh;
  isolation: isolate;
}

body {
  position: relative;
  min-height: 100svh;
  font-family: var(--font-sans);
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-user-select: none;
  user-select: none;
}

input,
textarea,
[contenteditable="true"],
[contenteditable="plaintext-only"] {
  -webkit-user-select: text;
  user-select: text;
}

[data-panning="true"] .canvas-surface,
[data-panning="true"] .canvas-node {
  cursor: grab;
}

[data-tool="text"] .canvas-surface {
  cursor: crosshair;
}

[data-tool="text"] .canvas-node {
  cursor: text;
}

@theme inline {
  --font-heading: var(--font-heading);
  --font-mono: var(--font-mono);
  --font-sans: var(--font-sans);
  --radius-sm: calc(var(--radius) - 2px);
  --radius-md: var(--radius);
  --radius-lg: calc(var(--radius) + 2px);
  --radius-xl: calc(var(--radius) + 4px);
  --radius-2xl: calc(var(--radius) + 6px);
  --radius-3xl: calc(var(--radius) + 10px);
  --radius-4xl: calc(var(--radius) + 14px);
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-destructive: var(--destructive);
  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);
  --color-chart-1: var(--chart-1);
  --color-chart-2: var(--chart-2);
  --color-chart-3: var(--chart-3);
  --color-chart-4: var(--chart-4);
  --color-chart-5: var(--chart-5);
  --color-sidebar: var(--sidebar);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-ring: var(--sidebar-ring);
  --animate-skeleton: skeleton 2s -1s infinite linear;
  --color-code-highlight: var(--code-highlight);
  --color-code-foreground: var(--code-foreground);
  --color-code: var(--code);
  --color-warning-foreground: var(--warning-foreground);
  --color-warning: var(--warning);
  --color-success-foreground: var(--success-foreground);
  --color-success: var(--success);
  --color-info-foreground: var(--info-foreground);
  --color-info: var(--info);
  --color-destructive-foreground: var(--destructive-foreground);
  @keyframes skeleton {
    to {
      background-position: -200% 0;
    }
  }
}

.dark {
  --background: color-mix(
    in srgb,
    var(--color-neutral-950) 95%,
    var(--color-white)
  );
  --foreground: var(--color-neutral-100);
  --card: color-mix(in srgb, var(--background) 98%, var(--color-white));
  --card-foreground: var(--color-neutral-100);
  --popover: color-mix(in srgb, var(--background) 98%, var(--color-white));
  --popover-foreground: var(--color-neutral-100);
  --primary: var(--color-neutral-100);
  --primary-foreground: var(--color-neutral-800);
  --secondary: --alpha(var(--color-white) / 4%);
  --secondary-foreground: var(--color-neutral-100);
  --muted: --alpha(var(--color-white) / 4%);
  --muted-foreground: color-mix(
    in srgb,
    var(--color-neutral-500) 90%,
    var(--color-white)
  );
  --accent: --alpha(var(--color-white) / 4%);
  --accent-foreground: var(--color-neutral-100);
  --destructive: color-mix(
    in srgb,
    var(--color-red-500) 90%,
    var(--color-white)
  );
  --border: --alpha(var(--color-white) / 4%);
  --input: --alpha(var(--color-white) / 6%);
  --ring: var(--color-neutral-500);
  --chart-1: var(--color-blue-700);
  --chart-2: var(--color-emerald-500);
  --chart-3: var(--color-amber-500);
  --chart-4: var(--color-purple-500);
  --chart-5: var(--color-rose-500);
  --sidebar: color-mix(
    in srgb,
    var(--color-neutral-950) 97%,
    var(--color-white)
  );
  --sidebar-foreground: color-mix(
    in srgb,
    var(--color-neutral-100) 64%,
    var(--sidebar)
  );
  --sidebar-primary: var(--color-neutral-100);
  --sidebar-primary-foreground: var(--color-neutral-800);
  --sidebar-accent: --alpha(var(--color-white) / 4%);
  --sidebar-accent-foreground: var(--color-neutral-100);
  --sidebar-border: --alpha(var(--color-white) / 5%);
  --sidebar-ring: var(--color-neutral-400);
  --destructive-foreground: var(--color-red-400);
  --info: var(--color-blue-500);
  --info-foreground: var(--color-blue-400);
  --success: var(--color-emerald-500);
  --success-foreground: var(--color-emerald-400);
  --warning: var(--color-amber-500);
  --warning-foreground: var(--color-amber-400);
  --code: color-mix(in srgb, var(--background) 98%, var(--color-white));
  --code-foreground: var(--foreground);
  --code-highlight: --alpha(var(--color-white) / 4%);
  --canvas-transform-box-lines: oklch(0.32 0 0);
  --canvas-transform-box-handles: oklch(0.32 0 0);
  --canvas-transform-box-handles-border: oklch(0.42 0 0);
  --canvas-transform-box-handles-ring: oklch(0.42 0 0);
  --canvas-transform-preview-box-lines: oklch(0.2495 0 0);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }

  body {
    @apply bg-background text-foreground;
  }

  code,
  kbd,
  samp,
  pre {
    font-family: var(--font-mono);
  }
}

